# 2024_formation-dhh

./: .gitignore  00_introduction.py  01_python.py  02_donnees.py  03_visualisation.py  04_python-local.py  README.md  pyproject.toml
