[project]
name = "formation-dhh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "lets-plot>=4.4.1",
    "marimo>=0.8.20",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
]
