[project]
name = "formation-dhh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.4.1",
    "geopandas>=1.0.1",
    "marimo>=0.8.20",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "pyjanitor>=0.29.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seekwellpandas>=0.1.0",
    "xarray>=2024.9.0",
]
